KFSPTS-25319 update version of financials to 8/17/2021 (#1318)